server/nohup.out
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Running on http://0.0.0.0:5001/ (Press CTRL+C to quit)
68.100.155.109 - - [21/Apr/2018 01:46:09] "GET / HTTP/1.1" 200 -
68.100.155.109 - - [21/Apr/2018 01:46:14] "GET / HTTP/1.1" 200 -
68.100.155.109 - - [21/Apr/2018 01:46:14] "GET /favicon.ico HTTP/1.1" 404 -
68.100.155.109 - - [21/Apr/2018 01:46:19] "GET / HTTP/1.1" 200 -
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
68.100.155.109 - - [21/Apr/2018 01:50:08] "GET / HTTP/1.1" 200 -
 * Serving Flask app "app"
Traceback (most recent call last):
  File "/home/bitnami/.local/bin/flask", line 11, in <module>
    sys.exit(main())
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 513, in main
    cli.main(args=args, prog_name=name)
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 380, in main
    return AppGroup.main(self, *args, **kwargs)
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/core.py", line 697, in main
    rv = self.invoke(ctx)
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/core.py", line 1066, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/core.py", line 895, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/core.py", line 535, in invoke
    return callback(*args, **kwargs)
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/decorators.py", line 64, in new_func
    return ctx.invoke(f, obj, *args[1:], **kwargs)
  File "/home/bitnami/.local/lib/python3.5/site-packages/click/core.py", line 535, in invoke
    return callback(*args, **kwargs)
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 423, in run_command
    app = DispatchingApp(info.load_app, use_eager_loading=eager_loading)
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 152, in __init__
    self._load_unlocked()
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 176, in _load_unlocked
    self._app = rv = self.loader()
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 237, in load_app
    rv = locate_app(self.app_import_path)
  File "/home/bitnami/.local/lib/python3.5/site-packages/flask/cli.py", line 90, in locate_app
    __import__(module)
  File "/home/bitnami/pyxis/server/crawler.py", line 1
    '
    ^
SyntaxError: EOL while scanning string literal
Traceback (most recent call last):
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/bin/flask", line 11, in <module>
    sys.exit(main())
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 513, in main
    cli.main(args=args, prog_name=name)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 380, in main
    return AppGroup.main(self, *args, **kwargs)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/core.py", line 697, in main
    rv = self.invoke(ctx)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/core.py", line 1066, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/core.py", line 895, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/core.py", line 535, in invoke
    return callback(*args, **kwargs)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/decorators.py", line 64, in new_func
    return ctx.invoke(f, obj, *args[1:], **kwargs)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/click/core.py", line 535, in invoke
    return callback(*args, **kwargs)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 423, in run_command
    app = DispatchingApp(info.load_app, use_eager_loading=eager_loading)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 152, in __init__
    self._load_unlocked()
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 176, in _load_unlocked
    self._app = rv = self.loader()
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 237, in load_app
    rv = locate_app(self.app_import_path)
  File "/home/bitnami/.local/share/virtualenvs/server-eig-0aT8/lib/python3.5/site-packages/flask/cli.py", line 90, in locate_app
    __import__(module)
  File "/home/bitnami/pyxis/server/crawler.py", line 1
    '
    ^
SyntaxError: EOL while scanning string literal
Traceback (most recent call last):
  File "crawler.py", line 9, in <module>
    from flask_cors import CORS
ImportError: No module named 'flask_cors'
